 <resources>
    <!-- Attributes Swimmer -->
    <string name="app_name">AppSwim</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nationality">Nationality</string>
    <string name="phone_number">Phone Number</string>
    <string name="Genre">Genre</string>
    <string name="Age">Birthday</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="Update">Update</string>
    <string name="Team">Team</string>
    <string name="Date">Birthday</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="Myswimmer">My Swimmers</string>
    <string name="Birthday">Select Date</string>

    <!-- Text Button-->
    <string name="Menu">Menu</string>
    <string name="FindSwimmer"> Find Swimmer</string>
    <string name="AddSwimmer"> Add Swimmer</string>
    <string name="EditSwimmer">Edit Swimmer</string>
    <string name="Search">Search</string>
     
     <!-- Attributes Race -->
     
     <string name="Distance"> Distance</string>
     <string name="Style">Style</string>
     <string name="Time"> Time</string>
     <string name="Place"> Place</string>

</resources>
