<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.appswim.CreateSwimmerActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Create Swimmer"
            app:titleTextColor="@android:color/white">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v4.widget.NestedScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="325dp"
            android:layout_height="56dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/button2"
            android:layout_width="55dp"
            android:layout_height="53dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_person_black_18dp"
            app:layout_constraintTop_toTopOf="@+id/firstNameEditText"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="7dp" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="325dp"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameEditText"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/button3"
            android:layout_width="62dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_phone_black_18dp"
            app:layout_constraintTop_toTopOf="@+id/phoneNumberEditText"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="7dp" />

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="325dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameEditText"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/genreEditText"
            android:layout_width="325dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/Genre"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditText"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnClickDate"
            android:layout_width="62dp"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/outline_date_range_black_18dp"
            app:layout_constraintTop_toTopOf="@+id/dateTv"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="325dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/Date"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genreEditText"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/button4"
            android:layout_width="62dp"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/outline_accessibility_new_black_18dp"
            app:layout_constraintTop_toTopOf="@+id/heightEditText"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="325dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/Height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTv"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/button5"
            android:layout_width="62dp"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/balance"
            app:layout_constraintTop_toTopOf="@+id/weightEditText"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="325dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/Weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightEditText"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button6"
            android:layout_width="62dp"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_people_black_18dp"
            app:layout_constraintTop_toTopOf="@+id/teamEditText"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/teamEditText"
            android:layout_width="325dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/Team"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightEditText"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="85dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round_save_black_18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamEditText"
            tools:ignore="MissingConstraints" />


    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>

