<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.appswim.SwimmerActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    app:title="MySwimmers"
    app:titleTextColor="@android:color/white">

    </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/swimmerRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <com.github.clans.fab.FloatingActionMenu
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="-1dp"
            android:foregroundGravity="center"
            app:backgroundTint="#3F51B5"
            fab:fab_label="Menu"
            fab:menu_colorNormal="@color/colorPrimary"
            fab:menu_fab_label="@string/Menu"
            fab:menu_icon="@drawable/swimmer">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/addSwimmerFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_swimmer"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_label="@string/AddSwimmer"
                fab:menu_shadowColor="@color/colorAccent" />

            <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_black_24dp"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_label="@string/FindSwimmer" />

        </com.github.clans.fab.FloatingActionMenu>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>

